# mmds

./: .dockerignore  AGENTS.md  DESCRIBE.md  DESIGN.md  Dockerfile  README.md  docker-compose.yml  proposal.tex  pyproject.toml  run
data/: animals-small.jsonl  animals.jsonl  clips.jsonl
examples/: README.md  run_expr.py  run_text.py  run_video_map_then_filter_from_expr.py  run_video_map_then_filter_from_text.py  run_wildlife_species_from_expr.py  run_wildlife_species_from_text.py  video_map_then_filter.py  wildlife_detection.py  wildlife_species.py  wildlife_species_count.py
scripts/: mmds-dev-entrypoint.sh
src/mmds/: __init__.py  dsl.py  execution.py  gemini_executor.py  llm_optimizer.py  model.py  parser.py  render.py  rule_optimizer.py  udf_catalog.py
src/mmds/execution/: __init__.py  _spec.py
src/mmds/execution/llm/: gemini.py
src/mmds/execution/ops/: detect.py  filter.py  map.py  reduce.py  unnest.py
src/mmds/optimizers/rewriter/: agent.py  rule.py
src/mmds/utilities/: video.py
tests/: test_detect.py  test_mmds.py  test_video.py
udfs/: __init__.py  detect.py  detect.pyi  planned_only.pyi  test_ops.py
