[project]
name = "mmds"
version = "0.1.0"
description = "Multi-modal Data Systems"
readme = "README.md"
authors = [
    { name = "Chanwut (Mick) Kittivorawong", email = "chanwutk@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mmds = "mmds:main"

[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"
